# bord

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  justfile  rustfmt.toml  sqlite.ungram  test_schema.sql  todos.MD
bord/: Cargo.toml
bord-cli/: Cargo.toml
bord-cli/src/: main.rs
bord/src/: lib.rs
codegen/: Cargo.toml
codegen/src/: gen_ast.rs
codegen/tests/: ungram_tests.rs
common/: Cargo.toml
macros/: Cargo.toml
macros/src/: lib.rs
old_scripts/: gen_ast.py  gen_parser.ts
schema-engine/: Cargo.toml
schema-engine/src/: lib.rs
server/: Cargo.toml
server-test/: Cargo.toml
server-test/src/: main.rs
server-test/tests/: parse_test.rs
server/benches/: regex_bench.rs
server/src/: capabilities.rs  config.rs  flycheck.rs  from_lsp.rs  lib.rs  main.rs  notifications.rs  requests.rs  responses.rs  text_document.rs  utils.rs  vfs.rs
server/src/features/: completion.rs  diagnostics.rs  mod.rs
server/tests/: tests.rs
sqlite3-analyzer/: Cargo.toml
sqlite3-analyzer/src/: lib.rs  resolve.rs
sqlite3-parser/: Cargo.toml
sqlite3-parser/benches/: lexer_bench.rs  parser_bench.rs
sqlite3-parser/src/: cst.rs  cst2.rs  cursor.rs  grammar.rs  lexer.rs  lib.rs  parser.rs  test_utils.rs  token_kind.rs  tree_kind.rs  ungram.rs  version.rs
sqlite3-parser/src/ast/: compare.rs  generated.rs  manual.rs  mod.rs
sqlite3-parser/src/cst/: batch.rs  incr.rs  mod.rs  slot.rs  slot_list.rs
sqlite3-parser/src/grammar/: common.rs
sqlite3-parser/src/new_cst/: mod.rs
sqlite3-parser/src/snapshots/: bord_sqlite3_parser__tests__check_joins-2.snap  bord_sqlite3_parser__tests__check_joins-3.snap  bord_sqlite3_parser__tests__check_joins-4.snap  bord_sqlite3_parser__tests__check_joins-5.snap  bord_sqlite3_parser__tests__check_joins-6.snap  bord_sqlite3_parser__tests__check_joins-7.snap  bord_sqlite3_parser__tests__check_joins-8.snap  bord_sqlite3_parser__tests__check_joins-9.snap  bord_sqlite3_parser__tests__check_joins.snap
sqlite3-parser/tests/: general_tests.rs  outside_tests.rs  valid_input_test.rs
sqlite3-parser/tests/common/: mod.rs
sqlite3-parser/tests/test_input/: create_table.test  insert_stmt.test  misc.test  select.test
yukon/: Cargo.toml
yukon/tests/: macros.rs
