[workspace]

members = [
    "bord",
    "macros",
    "server",
    "schema-engine",
    "sqlite3-analyzer",
    "sqlite3-parser",
    "bord-zed",
    "codegen",
]

resolver = "2"

[workspace.dependencies]
serde = "1.0.217"
serde_json = "1.0.137"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
smol_str = "0.2.2"
ahash = "0.8.11"
thiserror = "1.0.63"
text-size = "1.1.1"
pretty_assertions =  "1.4.0"
rstest = "0.24.0"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
