[package]
name = "codegen"
version = "0.1.0"
edition = "2021"

[dependencies]
quote = "1.0.38"
syn = { version = "2.0.96", features = ["full", "extra-traits"] }
bord-sqlite3-parser = { path = "../sqlite3-parser" }
convert_case = "0.7.1"
itertools = "0.14.0"
proc-macro2 = "1.0.93"
prettyplease = "0.2.29"

[[bin]]
name = "gen_ast"
path = "src/gen_ast.rs"
