[package]
name = "bord-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
hashbrown = "0.14.5"
line-index = "0.1.1"
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
bord-sqlite3-parser = { path = "../sqlite3-parser" }
itertools = "0.14.0"
tower-lsp = { features = ["tokio"], git = "https://github.com/rajesh-rahul/tower-lsp" }
dashmap = "6.1.0"
tokio = { version = "1", features = ["rt-multi-thread", "io-std", "macros"]}

[dev-dependencies]
pretty_assertions.workspace = true
rstest.workspace = true
