[package]
name = "bord-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
hashbrown = "0.14.5"
line-index = "0.1.1"
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
bord-sqlite3-parser = { path = "../sqlite3-parser" }
itertools = "0.14.0"
tower-lsp.workspace = true
dashmap = "6.1.0"

[dev-dependencies]
pretty_assertions.workspace = true
rstest.workspace = true
