[package]
name = "bord-sqlite3-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
enumset = "1.1.3"
smol_str.workspace = true
tinyvec = { version = "1.8.1", features = ["alloc"] }
ungrammar = { version = "1.16.1" }
either = "1.14.0"
slotmap = "1.0"
rustc-hash = "2.1.1"
text-size.workspace = true
sqlite3-parser = "0.14.0" # To be removed
fallible-iterator = "0.3.0" # To be removed

# These dependencies are only used for testing
nom = { version = "7.1.3", optional = true }
pretty_assertions =  { version = "1.4.0", optional = true }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
sqlite3-parser = "0.14.0"
fallible-iterator = "0.3.0"
insta = { version = "1.42.1", features = ["yaml"] }

[[bench]]
name = "lexer_bench"
harness = false

[[bench]]
name = "parser_bench"
harness = false

[features]
test_utils = ["dep:nom", "dep:pretty_assertions"]
